# parapente

./: .gitignore  Cargo.toml  README.md  STRUCTURE.txt
data/: ground_truth_80families.bed  ground_truth_80families.gtf
docs/: AGENTS.md  CLAUDE.md  METHODOLOGY.md  MULTI_MAPPING_SKELETON_CONCEPT.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  PROGRESS_NOTES.md  PROJECT_STATUS_AND_COMMANDS.md  README_CONNECTIVITY_SEED.md  README_RUST_DETECTOR.md
results/: FINAL_DETECTION_RESULTS.csv
results/all_families/: all.tsv
scripts/: batch_process_all_families.py  generate_per_member_tsv.py  run_all_families_resume.py  run_batch_83_families.py
src/: boundary_refinement.rs  clip_tail_trim.rs  cloud_splitter.rs  coverage_cache.rs  coverage_std_filter.rs  coverage_validation.rs  coverage_validator.rs  coverage_valley.rs  defensible_assembler.rs  family_aware_assembler.rs  fast_index.rs  integrated_detector.rs  isoseq.rs  isoseq_advanced.rs  jaccard_cache.rs  junction_refinement.rs  main.rs  optimized_detector.rs  read_cloud.rs  read_intern.rs  smart_seed_selector.rs  soft_clip.rs  splice_clouds.rs  spliced_read.rs  tight_locus_split.rs  transitive_detector.rs  trie_assembly_improved.rs  validator.rs
